--- a/src/Components/header/header.module.css
+++ b/src/Components/header/header.module.css
@@ -4,22 +4,26 @@ padding: 30px 0;
 }
 
 .navigation ul {
-  
   display: flex;
   gap: 20px;
-
   justify-content: space-between;
 
 }
+
+
+.navigation ul li a {
+   color:  #828282;
+   text-decoration: none;
+
+}
 .menuLinks{
-    color:  #828282;
+ 
     font-family: "Gilroy-Bold";
     line-height: 22.28px;
     font-size: 1rem;
 
 }
 .menuLinksActive {
-
     color:  #070707;
 }
 .hr{
