--- a/src/Components/home/home.module.css
+++ b/src/Components/home/home.module.css
@@ -34,6 +34,10 @@
   transform: rotate(270deg);
   transform-origin: right;
 }
+.allHome_photo{
+  display: flex;
+  flex-direction: column;
+}
 .allHome_photo img {
   width: 100%;
   max-height: 500px;
