fix code. add animation

--- a/src/Components/about/about.module.css
+++ b/src/Components/about/about.module.css
@@ -17,7 +17,7 @@ margin-bottom: 17px;
     align-items: center;
 }
 .aboutFon{
-  padding: 120px 0 107px 0;
+  padding: 80px 0 ;
 background: #F6F6F6;
 
 }
