--- a/src/Components/home/home.module.css
+++ b/src/Components/home/home.module.css
@@ -1,5 +1,5 @@
 .allHome_info {
-  margin: 39px 0 30px 0;
+  margin: 0px 0 30px 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 2fr;
@@ -32,6 +32,9 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+}
+.home {
+  padding-top: 45px;
 }
 .lang {
   width: 100%;
