--- a/src/Components/skills/skills.module.css
+++ b/src/Components/skills/skills.module.css
@@ -3,7 +3,7 @@
   justify-content: space-around;
 }
 .title {
-  margin: 90px 0 60px 0;
+  margin: 0px 0 60px 0;
 
 }
 .wrapperSvg {
@@ -20,5 +20,5 @@
 
 
 .skills{
-margin: 100px 0;
+padding: 80px 0;
 }
