--- a/src/Components/header/header.module.css
+++ b/src/Components/header/header.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   position: sticky;
   top: 0;
-  background:linear-gradient(#d1d1d1e8,#ffffffeb );
+  background: linear-gradient(#d1d1d1e8, #ffffffeb);
 }
 .row {
   padding: 15px 0;
@@ -30,7 +30,14 @@
 .hr {
   margin: 0;
 }
-@media (max-width: 600px) {
 
-  
+@media (max-width: 600px) {
+  .navigation {
+
+    justify-content: normal;
+    flex-direction: column;
+  }
+/* .closedBurger{
+display: block;
+} */
 }
