--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -50,3 +50,13 @@ body{
   font-size: 18px;
   line-height: 21px;
 }
+
+.container {
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  
+}
+.hr {
+    margin: 0;
+  }
